--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "static-website-webpack-boilerplate",
+  "name": "react-static-website-boilerplate",
   "version": "0.0.1",
-  "description": "Static website boilerplate using webpack and bootstrap",
+  "description": "Static website boilerplate built using React",
   "main": "bundle.js",
   "scripts": {
     "start": "webpack --watch",
@@ -16,10 +16,16 @@
   ],
   "author": "Binoy Patel",
   "license": "MIT",
+  "repository" : { 
+  	"type" : "git",
+  	"url" : "https://github.com/binoy14/react-static-website-boilerplate"
+  },
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.13.0",
     "browser-sync": "^2.14.0",
     "browser-sync-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.10",
@@ -37,6 +43,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.6.3",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-router": "^2.7.0"
   }
 }
