--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   ],
   "author": "Binoy Patel",
   "license": "MIT",
-  "repository" : { 
-  	"type" : "git",
-  	"url" : "https://github.com/binoy14/react-static-website-boilerplate"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/binoy14/react-static-website-boilerplate"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
@@ -31,6 +31,7 @@
     "clean-webpack-plugin": "^0.1.10",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
